Fixed suggestions and Warnings
Task: 5644791: Fixed suggestions and Warnings as per the attachment provided in the task description.

--- a/browsers/edge/group-policies/index.yml
+++ b/browsers/edge/group-policies/index.yml
@@ -9,7 +9,7 @@ metadata:
   keywords: Microsoft Edge Legacy, Windows 10
   ms.localizationpriority: medium
   ms.prod: edge
-  author: shortpatti
+  author: dougeby
   ms.author: pashort
   ms.topic: landing-page
   ms.devlang: na
