--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -257,6 +257,8 @@ items:
           items: 
             - name: EnterpriseAPN DDF
               href: enterpriseapn-ddf.md
+        - name: EnterpriseAppManagement CSP
+          href: enterpriseappmanagement-csp.md
         - name: EnterpriseAppVManagement CSP
           href: enterpriseappvmanagement-csp.md
           items: 
