Fixed Title to WDAC secure settings link

--- a/windows/security/threat-protection/windows-defender-application-control/TOC.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/TOC.yml
@@ -22,7 +22,7 @@
               href: understand-windows-defender-application-control-policy-design-decisions.md
             - name: Understand WDAC policy rules and file rules
               href: select-types-of-rules-to-create.md
-            - name: Understand WDAC secure settings
+            - name: Understand WDAC policy rules and file rules
               href: understanding-wdac-policy-settings.md
               items: 
                 - name: Allow apps installed by a managed installer
