--- a/windows/deployment/do/TOC.yml
+++ b/windows/deployment/do/TOC.yml
@@ -34,7 +34,7 @@
             - name: Configuration Manager settings
               href: /windows/whats-new/windows-11-plan
 
-    - name: Reference
+    - name: Resources
       items:
         - name: Blog1
           href: /windows/whats-new/windows-11-plan
