--- a/windows/deployment/do/index.yml
+++ b/windows/deployment/do/index.yml
@@ -43,13 +43,13 @@ landingContent:
       - linkListType: how-to-guide
         links:
           - text: Delivery Optimization settings
-            url: update/prepare-deploy-windows.md
+            url: waas-delivery-optimization-setup.md#recommended-delivery-optimization-settings
           - text: Windows PowerShell for Delivery Optimization
-            url: update/waas-manage-updates-wufb.md
+            url: waas-delivery-optimization-setup.md#windows-powershell-cmdlets
           - text: Troubleshooting Delivery Optimization
-            url: deploy-windows-cm/prepare-for-zero-touch-installation-of-windows-10-with-configuration-manager.md
+            url: waas-delivery-optimization-setup.md#troubleshooting
           - text: Submit feedback
-            url: update/waas-manage-updates-wufb.md
+            url: https://support.microsoft.com/help/4021566/windows-10-send-feedback-to-microsoft-with-feedback-hub-app
 
   # Card (optional)
   - title: Configure Delivery Optimization on Microsoft Endpoint Manager
@@ -58,6 +58,9 @@ landingContent:
         links:
           - text: Optimize Windows 10 or later update delivery with Configuration Manager
             url: /mem/configmgr/sum/deploy-use/optimize-windows-10-update-delivery#windows-delivery-optimization
+          - text: Delivery Optimization settings in Microsoft Intune
+            url: /mem/intune/configuration/delivery-optimization-windows
+            
  
   # Card
   - title: Microsoft Connected Cache (MCC) for Enterprises
