fixing ms.author

--- a/windows/security/identity-protection/hello-for-business/hello-faq.yml
+++ b/windows/security/identity-protection/hello-for-business/hello-faq.yml
@@ -9,7 +9,7 @@ metadata:
   ms.pagetype: security, mobile
   audience: ITPro
   author: GitPrakhar13
-  ms.author: GitPrakhar13
+  ms.author: prsriva
   manager: dansimp
   ms.collection:
     - M365-identity-device-management
