--- a/windows/security/identity-protection/hello-for-business/index.yml
+++ b/windows/security/identity-protection/hello-for-business/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: landing-page
   author: GitPrakhar13
   manager: dansimp
-  ms.author: GitPrakhar13
+  ms.author: prsriva
   ms.date: 01/22/2021
   ms.collection:
     - M365-identity-device-management
